--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -343,6 +343,11 @@
             <div class="amercias-box-title">
                 <p><b>North And South America Locations</b></p>
             </div>
+            <div class="hero-usa-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/usa.html">USA Locations</a>
+                </div>
+            </div>
         </div>
 
     </main>
