--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -348,6 +348,21 @@
                     <a href="../buy-files/usa.html">USA Locations</a>
                 </div>
             </div>
+            <div class="hero-canada-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/canada.html">Canada Locations</a>
+                </div>
+            </div>
+            <div class="hero-brazil-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/brazil.html">Brazil Locations</a>
+                </div>
+            </div>
+            <div class="hero-mexico-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/mexico.html">Mexico Locations</a>
+                </div>
+            </div>
         </div>
 
     </main>
