--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -363,6 +363,20 @@
                     <a href="../buy-files/mexico.html">Mexico Locations</a>
                 </div>
             </div>
+            <div class="hero-comlobia-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/columbia.html">Columbia Locations</a>
+                </div>
+            </div>
+            <div class="category-button">
+                <a href="../buy-files/argentina.html">Argentina Locations</a>
+            </div>
+            <div class="category-button">
+                <a href="../buy-files/peru.html">Peru Locations</a>
+            </div>
+            <div class="category-button">
+                <a href="../buy-files/venezuela.html">Venezuela Locations</a>
+            </div>
         </div>
 
     </main>
