--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -377,6 +377,12 @@
             <div class="category-button">
                 <a href="../buy-files/venezuela.html">Venezuela Locations</a>
             </div>
+            <div class="category-button">
+                <a href="../buy-files/chile.html">Chile Locations</a>
+            </div>
+            <div class="category-button">
+                <a href="../buy-files/guatemala.html">Guatemala Locations</a>
+            </div>
         </div>
 
     </main>
