--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -383,6 +383,11 @@
             <div class="category-button">
                 <a href="../buy-files/guatemala.html">Guatemala Locations</a>
             </div>
+            <div class="hero-domnician-republic-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/domician-repuvlic.html">Dominican Republic Locations</a>
+                </div>
+            </div>
         </div>
 
     </main>
