--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -388,6 +388,32 @@
                     <a href="../buy-files/domician-repuvlic.html">Dominican Republic Locations</a>
                 </div>
             </div>
+            <div class="hero-cuba-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/cuba.html">Cuba Locations</a>
+                </div>
+            </div>
+            <div class="hero-jamaica-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/jamaica.html">Jamaica Locations</a>
+                </div>
+            </div>
+            <div class="hero-bahamas-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/bahams.html">Bahamas Lcoation</a>
+                </div>
+            </div>
+            <div class="hero-barbados-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/barbados.html">Barbados Location</a>
+                </div>
+            </div>
+            <div class="category-button">
+                <a href="../buy-files/ecuador.html">Ecador Locations</a>
+            </div>
+            <div class="category-button">
+                <a href="../buy-files/honduras.html">Honduras Locations</a>
+            </div>
         </div>
 
     </main>
