--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -414,6 +414,15 @@
             <div class="category-button">
                 <a href="../buy-files/honduras.html">Honduras Locations</a>
             </div>
+            <div class="category-button">
+                <a href="../buy-files/costa-rica.html">Costa Rica Locations</a>
+            </div>
+            <div class="category-button">
+                <a href="../buy-files/saint-luica.html">Saint Lucia Locations</a>
+            </div>
+            <div class="category-button">
+                <a href="../buy-files/uruguay.html">Uruguay Locations</a>
+            </div>
         </div>
 
     </main>
