--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -191,6 +191,14 @@
             </div>
         </div>
 
+        <div class="end-of-box">
+            <div class="text-box">
+                <p><b>Isn't Europe Quite Your Thing?</b></p>
+                <p>That's Fully Okay, Europe Isn't For Everyone</p>
+                <p>Take A Look Below To See If Maybe Our Locations In Asia Might Catch Your Eyes</p>
+            </div>
+        </div>
+
         <div class="flex-asia-constiries-box wrap">
             <div class="asia-box-title">
                 <p><b>Asia Locations</b></p>
@@ -262,6 +270,14 @@
             </div>
         </div>
 
+        <div class="end-of-box">
+            <div class="text-box">
+                <p><b>Isn't Asia Quite Your Vibe?</b></p>
+                <p>That's Fully Okay, Asia Isn't For Everyone</p>
+                <p>Take A Look Below To See If Maybe Our Locations In Oceania Might Catch Your Eyes</p>
+            </div>
+        </div>
+
         <div class="flex-oceania-constiries-box wrap">
             <div class="oceania-box-title">
                 <p><b>Oceania Locations</b></p>
@@ -290,6 +306,14 @@
                 <div class="hero-text-all">
                     <a href="../buy-files/new-guinea.html">Papua New Guinea Locations</a>
                 </div>
+            </div>
+        </div>
+
+        <div class="end-of-box">
+            <div class="text-box">
+                <p><b>Isn't Oceania Quite Your Slice Of Pie?</b></p>
+                <p>That's Fully Okay, Oceania Might Not Be Isn't For Everyone</p>
+                <p>Take A Look Below To See If Maybe Our Locations In Africa Might Catch Your Eyes</p>
             </div>
         </div>
 
@@ -336,6 +360,14 @@
             </div>
             <div class="category-button">
                 <a href="../buy-files/zimbabwe.html">Zimbabwe Locations</a>
+            </div>
+        </div>
+
+        <div class="end-of-box">
+            <div class="text-box">
+                <p><b>Isn't Africa Quite Your Home?</b></p>
+                <p>That's Fully Okay, Africe Might Not Be Isn't For Everyone</p>
+                <p>Take A Look Below To See If Maybe Our Locations In South & North America Might Catch Your Eyes</p>
             </div>
         </div>
 
