--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -457,6 +457,18 @@
             </div>
         </div>
 
+        <div class="end-of-option-info-box">
+            <div id="text-end-info-box">
+                <p><b>You Know Have Looked Through All Of Our Options</b></p>
+                <p>Are You Not Sure Where Do You Want To Live ?</p>
+                <p>If So You Are At The Correct Place, We Can Help You</p>
+                <p>Click On THe button Below To Get In Contact With Us And We Will Help You</p>
+                <div class="go-to-contact-button">
+                    <a href="./contact.html">Click Here</a>
+                </div>
+            </div>
+        </div>
+
     </main>
 
     <!--Footer-->
