--- a/buy-files/switzerland.html
+++ b/buy-files/switzerland.html
@@ -12,21 +12,21 @@
     <!--Header-->
     <header class="page-header">
         <div id="header-logo">
-            <a href="./index.html">
+            <a href="../html-files/index.html">
                 <img src="../media/example_2.png">
             </a>
         </div>
         <div id="header-icons">
-            <a href="./login.html">
+            <a href="../html-files/login.html">
                 <img src="../media/account.png">
             </a>
             <img src="../media/line.png">
         </div>
         <div id="links-header">
-            <a href="./construction.html">Build</a>
-            <a href="./rent.html">Rent</a>
-            <a href="./sell.html">Sell</a>
-            <a href="./buy.html">Buy</a>
+            <a href="../html-files/construction.html">Build</a>
+            <a href="../html-files/rent.html">Rent</a>
+            <a href="../html-files/sell.html">Sell</a>
+            <a href="../html-files/buy.html">Buy</a>
         </div>
     </header>
 
@@ -38,27 +38,27 @@
     <footer class="page-footer">
         <div class="footer-about">
             <p>About Us</p>
-            <a href="./about.html">About Us</a>
+            <a href="../html-files/about.html">About Us</a>
             <br>
-            <a href="./contact.html">Contact Us</a>
+            <a href="../html-files/contact.html">Contact Us</a>
         </div>
         <div class="footer-work">
             <p>Our Work</p>
-            <a href="./staff.html">Our Staff</a>
+            <a href="../html-files/staff.html">Our Staff</a>
             <br>
-            <a href="./work-for-us.html">Work</a>
+            <a href="../html-files/work-for-us.html">Work</a>
         </div>
         <div class="footer-services-1">
             <p>Buy Or Sell</p>
-            <a href="./buy.html">Buy</a>
+            <a href="../html-files/buy.html">Buy</a>
             <br>
-            <a href="./sell.html">Sell</a>
+            <a href="../html-files/sell.html">Sell</a>
         </div>
         <div class="footer-services-2">
             <p>Build Or Rent</p>
-            <a href="./construction.html">Build</a>
+            <a href="../html-files/construction.html">Build</a>
             <br>
-            <a href="./rent.html">Rent</a>
+            <a href="../html-files/rent.html">Rent</a>
         </div>
         <div class="social-media">
             <p>Social Media</p>
