--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -442,7 +442,7 @@
                 </div>
             </div>
             <div class="category-button">
-                <a href="../buy-files/ecuador.html">Ecador Locations</a>
+                <a href="../buy-files/ecuador.html">Ecuador Locations</a>
             </div>
             <div class="category-button">
                 <a href="../buy-files/honduras.html">Honduras Locations</a>
