--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -32,6 +32,14 @@
 
     <!--Content-->
     <main class="page-body">
+        <div class="flex-properties-one">
+            <div class="title-box">
+                <p><b>Naples</b></p>
+            </div>
+            <div class="estate-container">
+                
+            </div>
+        </div>
     </main>
 
     <!--Footer-->
