--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link type="text/css" rel="stylesheet" href="../css-files/header-footer.css">
+    <link type="text/css" rel="stylesheet" href="../css-files/buy-properties.css">
     <meta charset="UTF-8">
     <meta name="Italy Locations Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="AKB">
@@ -32,12 +33,23 @@
 
     <!--Content-->
     <main class="page-body">
-        <div class="flex-properties-one">
-            <div class="title-box">
-                <p><b>Naples</b></p>
-            </div>
-            <div class="estate-container">
-                
+        <div class="estate-naples wrap">
+            <div class="properties-container">
+                <div class="estate-photo">
+                    <img src="../photos/naples-house-one.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>Estate Name</h1>
+                        <p>6 Bedrooms, 4 Bathrooms, 2 Office Rooms, Wine Celler, Laudry Room, Kitchen, Living Room, Huge Garden, 4 Cars Garage</p>
+                    </div>
+                </div>
+                <div class="estate-price-and-button">
+                    <p><span>2.950.00</span>$</p>
+                    <div class="estate-button">
+                        <a href="../html-files/contact.html">Contact Us</a>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
