--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -44,11 +44,11 @@
                         <p>6 Bedrooms, 4 Bathrooms, 2 Office Rooms, Wine Celler, Laudry Room, Kitchen, Living Room, Huge Garden, 4 Cars Garage</p>
                     </div>
                 </div>
-                <div class="estate-price-and-button">
-                    <p><span>2.950.00</span>$</p>
-                    <div class="estate-button">
-                        <a href="../html-files/contact.html">Contact Us</a>
-                    </div>
+                <div class="estate-price">
+                    <p><b>$2.950.000</b></p>
+                </div>
+                <div id="estate-button">
+                    <a href="../html-files/contact.html">Contact Us</a>
                 </div>
             </div>
         </div>
