--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link type="text/css" rel="stylesheet" href="../css-files/header-footer.css">
-    <link type="text/css" rel="stylesheet" href="../css-files/buy-properties.css">
+    <link type="text/css" rel="stylesheet" href="../css-files/property-cards.css">
     <meta charset="UTF-8">
     <meta name="Italy Locations Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="AKB">
@@ -41,7 +41,7 @@
                 <div class="estate-info">
                     <div class="estate-info-text">
                         <h1>Estate Name</h1>
-                        <p>6 Bedrooms, 4 Bathrooms, 2 Office Rooms, Wine Celler, Laudry Room, Kitchen, Living Room, Huge Garden, 4 Cars Garage</p>
+                        <p>6 Bedrooms, 4 Bathrooms, 2 Office Rooms, Wine Celler, Laudry Room, Kitchen, Living Room, 4 Cars Garage, Huge Garden</p>
                     </div>
                 </div>
                 <div class="estate-price">
