--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -33,14 +33,15 @@
 
     <!--Content-->
     <main class="page-body">
-        <div class="estate-naples wrap">
+        <div class="estate-italy wrap">
+            <h2>Italy Locations</h2>
             <div class="properties-container">
                 <div class="estate-photo">
                     <img src="../photos/naples-house-one.jpeg">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
-                        <h1>Estate Name</h1>
+                        <h1>Naples Estate</h1>
                         <p>6 Bedrooms, 4 Bathrooms, 2 Office Rooms, Wine Celler, Laudry Room, Kitchen, Living Room, 4 Cars Garage, Huge Garden</p>
                     </div>
                 </div>
@@ -49,6 +50,17 @@
                 </div>
                 <div id="estate-button">
                     <a href="../html-files/contact.html">Contact Us</a>
+                </div>
+            </div>
+            <div class="properties-container-one">
+                <div class="estate-photo">
+                    <img src="../photos/naples-house-two.webp">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>Rome Estate</h1>
+                        <p>8 Bedrooms, 5 Bathrooms, Office Room, Basement, Attic, Laudry Room, Kitchen, Living Room, </p>
+                    </div>
                 </div>
             </div>
         </div>
