--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -59,8 +59,14 @@
                 <div class="estate-info">
                     <div class="estate-info-text">
                         <h1>Rome Estate</h1>
-                        <p>8 Bedrooms, 5 Bathrooms, Office Room, Basement, Attic, Laudry Room, Kitchen, Living Room, </p>
+                        <p>8 Bedrooms, 5 Bathrooms, Office Room Attic, Laudry Room, Kitchen, Living Room, Balcony, Huge Garden With Ocean View </p>
                     </div>
+                </div>
+                <div class="estate-price">
+                    <p><b>$3.595.000</b></p>
+                </div>
+                <div id="estate-button">
+                    <a href="../html-files/contact.html">Contact Us</a>
                 </div>
             </div>
         </div>
