--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -69,6 +69,23 @@
                     <a href="../html-files/contact.html">Contact Us</a>
                 </div>
             </div>
+            <div class="properties-container-three">
+                <div class="estate-photo">
+                    <img src="../photos/naples-house-three.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>Venice House</h1>
+                        <p>4 Bedrooms, 4 Bathrooms, Laudry Room, Kitchen, Living Room, 2 Balconies, Garden, 3 Cars Garage, Big Windows</p>
+                    </div>
+                </div>
+                <div class="estate-price-one">
+                    <p><b>$2.599.000</b></p>
+                </div>
+                <div id="estate-button-one">
+                    <a href="../html-files/contact.html">Contact Us</a>
+                </div>
+            </div>
         </div>
     </main>
 
