--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -42,7 +42,7 @@
                 <div class="estate-info">
                     <div class="estate-info-text">
                         <h1>Naples Estate</h1>
-                        <p>6 Bedrooms, 4 Bathrooms, 2 Office Rooms, Wine Celler, Laudry Room, Kitchen, Living Room, 4 Cars Garage, Huge Garden</p>
+                        <p><b>Located In Naples.</b> 6 Bedrooms, 4 Bathrooms, 2 Office Rooms, Wine Celler, Laudry Room, Kitchen, Living Room, 4 Cars Garage, Huge Garden</p>
                     </div>
                 </div>
                 <div class="estate-price">
@@ -59,7 +59,7 @@
                 <div class="estate-info">
                     <div class="estate-info-text">
                         <h1>Rome Estate</h1>
-                        <p>8 Bedrooms, 5 Bathrooms, Office Room Attic, Laudry Room, Kitchen, Living Room, Balcony, Huge Garden With Ocean View </p>
+                        <p><b>Located In Rome</b> 8 Bedrooms, 5 Bathrooms, Office Room Attic, Laudry Room, Kitchen, Living Room, Balcony, Huge Garden With Ocean View </p>
                     </div>
                 </div>
                 <div class="estate-price">
@@ -76,7 +76,7 @@
                 <div class="estate-info">
                     <div class="estate-info-text">
                         <h1>Venice House</h1>
-                        <p>4 Bedrooms, 4 Bathrooms, Laudry Room, Kitchen, Living Room, 2 Balconies, Garden, 3 Cars Garage, Big Windows</p>
+                        <p><b>Located In Venice</b> 4 Bedrooms, 4 Bathrooms, Laudry Room, Kitchen, Living Room, 2 Balconies, Garden, 3 Cars Garage, Big Windows</p>
                     </div>
                 </div>
                 <div class="estate-price-one">
