--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -41,8 +41,8 @@
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
-                        <h1>Naples Estate</h1>
-                        <p><b>Located In Naples.</b> 6 Bedrooms, 4 Bathrooms, 2 Office Rooms, Wine Celler, Laudry Room, Kitchen, Living Room, 4 Cars Garage, Huge Garden</p>
+                        <h1>Located In Naples</h1>
+                        <p>6 Bedrooms, 4 Bathrooms, 2 Office Rooms, Wine Celler, Laudry Room, Kitchen, Living Room, 4 Cars Garage, Huge Garden</p>
                     </div>
                 </div>
                 <div class="estate-price">
@@ -58,8 +58,8 @@
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
-                        <h1>Rome Estate</h1>
-                        <p><b>Located In Rome</b> 8 Bedrooms, 5 Bathrooms, Office Room Attic, Laudry Room, Kitchen, Living Room, Balcony, Huge Garden With Ocean View </p>
+                        <h1>Located In Rome</h1>
+                        <p>8 Bedrooms, 5 Bathrooms, Office Room Attic, Laudry Room, Kitchen, Living Room, Balcony, Huge Garden With Ocean View </p>
                     </div>
                 </div>
                 <div class="estate-price">
@@ -75,8 +75,8 @@
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
-                        <h1>Venice House</h1>
-                        <p><b>Located In Venice</b> 4 Bedrooms, 4 Bathrooms, Laudry Room, Kitchen, Living Room, 2 Balconies, Garden, 3 Cars Garage, Big Windows</p>
+                        <h1>Located In Venice</h1>
+                        <p>4 Bedrooms, 4 Bathrooms, Laudry Room, Kitchen, Living Room, 2 Balconies, Garden, 3 Cars Garage, Big Windows</p>
                     </div>
                 </div>
                 <div class="estate-price-one">
@@ -84,6 +84,23 @@
                 </div>
                 <div id="estate-button-one">
                     <a href="../html-files/contact.html">Contact Us</a>
+                </div>
+            </div>
+            <div class="properties-container-three">
+                <div class="estate-photo">
+                    <img src="../photos/naples-house-l.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>Located In Florence</h1>
+                        <p>4 Bedrooms, 3 Bathrooms, Outdoor Pool, Kitchen, Laudry Room, Living Room, Balocony, Garden, 2 Car Garge</p>
+                    </div>
+                </div>
+                <div class="estate-price-one">
+                    <p><b>$3.120.000</b></p>
+                </div>
+                <div id="estate-button-one">
+                    <a href="../html-files/contact">Contact Us</a>               
                 </div>
             </div>
         </div>
