--- a/html-files/index.html
+++ b/html-files/index.html
@@ -162,8 +162,9 @@
                 </div>
                 <div class="selling-right">
                     <div class="selling-textbox">
-                        <h3>Discover ECO-friendly houses of the future which won’t cost you your both livers</h3>
-                        <p>we are partnering with Tesla, to give you a better and cheaper option of living, which is also environment friendly</p>
+                        <h3>Considering Selling?</h3>
+                        <p>Do you want to sell or are you considering selling your house/apartment?
+                            We make sure you hit the market place and sell for the correct estimated value of your property possible, for as low as 2% fee of your brutto price we sell your property for!</p>
                     </div>
                     <div class="learn-more-button" id="selling-content-button">
                         <a href="">
@@ -178,8 +179,8 @@
             <div class="buying-content">
                 <div class="buying-left">
                     <div class="buying-textbox">
-                        <h3>Discover ECO-friendly houses of the future which won’t cost you your both livers</h3>
-                        <p>we are partnering with Tesla, to give you a better and cheaper option of living, which is also environment friendly</p>
+                        <h3>Find your dream home with us</h3>
+                        <p>We make sure all the partners in the process of both buying and selling, have a positive experience. As a buyer, we make sure you get what you pay for and more, learn what rights you have as a buyer and see what we can help you with.</p>
                     </div>
                     <div class="learn-more-button">
                         <a href="">
