--- a/html-files/rent.html
+++ b/html-files/rent.html
@@ -46,7 +46,7 @@
                     <a href="index.html"><i class="fa-solid fa-arrow-left"></i> Go Back</a>
                 </div>
 
-                <h1>Filter</h1>
+                <p>You can personalize your search here</p>
 
                 <h2>Published:</h2>
                 <div class="filters">
@@ -127,16 +127,19 @@
             </div>
     
             <div class="rent-properties-content">
+
                 <div class="properties-rent">
+
                     <div class="rentals">
+
                         <div class="property">
                             <a href="property-detail.html">
                                 <img src="/photos/ap1.webp" alt="">
                                 <div class="property-text">
-                                    <h2>Property Name</h2>
-                                    <p>Location</p>
-                                    <p>Rom Amount</p>
-                                    <p><span>Monthly Price</span></p>
+                                    <h2>Shannons Apartments</h2>
+                                    <p>221B Baker Street</p>
+                                    <p>4 Rooms</p>
+                                    <p><span>1200 $ pr Month</span></p>
                                 </div>
                             </a>
                         </div>
