started on sell html page

--- a/html-files/sell.html
+++ b/html-files/sell.html
@@ -32,6 +32,100 @@
 
     <!--Content-->
     <main class="page-body">
+
+        <div>
+            <div>
+                <h2>What do You intend?</h2>
+                <label class="filtercontainer">
+                    <input type="checkbox">
+                    <span class="checkmark"></span> Sell
+                </label>
+                <label class="filtercontainer">
+                    <input type="checkbox">
+                    <span class="checkmark"></span> Rent
+                </label>
+            </div>
+            <div>
+                <h2>What Type of Property?</h2>
+                <label class="filtercontainer">
+                    <input type="checkbox">
+                    <span class="checkmark"></span> House
+                </label>
+                <label class="filtercontainer">
+                    <input type="checkbox">
+                    <span class="checkmark"></span> Apartment
+                </label>
+            </div>
+        </div>
+        <div>
+            <div>
+                <h2>Property Name</h2>
+                <label for="Property Name">
+                    <input type="text" name="" id="">
+                </label>
+
+                <h2>Property Location</h2>
+                <label for="Property Location">
+                    <input type="text" name="" id="">
+                </label>
+
+                <h2>Description</h2>
+                <label for="Property Description">
+                    <input type="text" name="" id="">
+                </label>
+
+                <h2>Details</h2>
+                <p>number of:</p>
+                <div>
+                    <label for="Property Details">Bedrooms
+                        <input type="number" name="" id="">
+                    </label>
+                    <label for="Property Details">Kitchens
+                        <input type="number" name="" id="">
+                    </label>
+                    <label for="Property Details">Living Rooms
+                        <input type="number" name="" id="">
+                    </label>
+                    <label for="Property Details">Floors/Stories
+                        <input type="number" name="" id="">
+                    </label>
+                    <label class="filtercontainer">
+                        <input type="checkbox">
+                        <span class="checkmark"></span> Garden
+                    </label>
+                </div>
+
+                <h2>Submit Pictures</h2>
+                <form action="">
+                    <label for="myfile"></label>
+                    <input type="file" id="myfile" name="myfile">
+                </form>
+
+                <h2>Price</h2>
+                <label for="Property Price">
+                    <input type="number" name="" id="">
+                </label>
+
+                <label class="filtercontainer"><p>Would you like to be contacted by one of our Agents and get help along the buying/renting process?</p>
+                    <div>
+                        <div>
+                            <input type="checkbox">
+                            <span class="checkmark"></span>Yes
+                        </div>
+                        <div>
+                            <input type="checkbox">
+                            <span class="checkmark"></span>No
+                        </div>
+                    </div>
+                </label>
+
+                <div>
+                    <a href="">Submit</a>
+                </div>
+
+            </div>
+        </div>
+
     </main>
 
     <!--Footer-->
