--- a/html-files/property-detail.html
+++ b/html-files/property-detail.html
@@ -39,7 +39,9 @@
     <main class="page-body">
     
         <div class="content">
-
+            <div class="property-looks"> <!-- Needs Javascript to actually work, gonna fix it later-->
+                <img src="/photos/ap1.webp" alt="">
+            </div>
         </div>
 
     </main>
