making things look better with css

--- a/html-files/property-detail.html
+++ b/html-files/property-detail.html
@@ -39,8 +39,28 @@
     <main class="page-body">
     
         <div class="content">
+
             <div class="property-looks"> <!-- Needs Javascript to actually work, gonna fix it later-->
                 <img src="/photos/ap1.webp" alt="">
+            </div>
+
+            <div class="property-info">
+                <h1>Shannons Apartments</h1>
+                <p>This property has 4 rooms in total:</p>
+                <div class="property-rooms">
+                    <div class="rooms">
+                        <h2>1 Bathroom</h2>
+                        <h2>1 Bedroom</h2>
+                        <h2>1 Kitchen</h2>
+                        <h2>1 Living Room</h2>
+                        <h2>1 Balcony</h2>
+                    </div>
+                    <div class="squaremeters">
+                        <h3>= 48m2</h3>
+                    </div>
+                </div>
+                <h3>Monthly Price</h3>
+                <p>1200$</p>
             </div>
         </div>
 
