--- a/html-files/property-detail.html
+++ b/html-files/property-detail.html
@@ -46,7 +46,7 @@
 
             <div class="property-info">
                 <h1>Shannons Apartments</h1>
-                <p>This property has 4 rooms in total:</p>
+                <p>This property has 4 rooms in total, <br>That includes:</p>
                 <div class="property-rooms">
                     <div class="rooms">
                         <h2>1 Bathroom</h2>
@@ -60,7 +60,10 @@
                     </div>
                 </div>
                 <h3>Monthly Price</h3>
-                <p>1200$</p>
+                <p>$ 1200</p>
+                <div class="property-location">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4965.528411245755!2d-0.15778155807615565!3d51.51754179027588!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761acdabd7f677%3A0xa3fa518b103821ce!2s22b%20Baker%20St%2C%20London%20W1U%203BW%2C%20UK!5e0!3m2!1sen!2sno!4v1712009877143!5m2!1sen!2sno" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </div>
         </div>
 
