--- a/html-files/property-detail.html
+++ b/html-files/property-detail.html
@@ -65,6 +65,29 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4965.528411245755!2d-0.15778155807615565!3d51.51754179027588!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761acdabd7f677%3A0xa3fa518b103821ce!2s22b%20Baker%20St%2C%20London%20W1U%203BW%2C%20UK!5e0!3m2!1sen!2sno!4v1712009877143!5m2!1sen!2sno" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
+
+            <div class="property-description">
+                <h2>Property Description</h2>
+                <p>Welcome to your urban oasis! This modern apartment boasts a sleek kitchen with stainless steel appliances and granite countertops, perfect for culinary endeavors. The inviting living room offers ample space for relaxation and entertainment, adorned with large windows flooding the space with natural light. A serene bedroom provides a peaceful retreat with plush carpeting and generous closet space. Step onto the private balcony for stunning city views, ideal for morning coffee or evening relaxation. The modern bathroom features luxurious fixtures and a spa-like atmosphere for ultimate comfort. With its prime location and upscale amenities, this apartment offers the epitome of urban living. Don't miss out on the opportunity to make it your own—schedule your viewing today!</p>
+                <p><strong>Published: 02.04.2024</strong></p>
+            </div>
+
+            <div class="contact">
+                <div class="seller">
+                    <i class="fa-regular fa-user"></i>
+                    <h2>Irene <br>Langhaug</h2>
+                </div>
+
+                <div class="submit">
+                    <p>Interested?</p>
+                    <h4>Schedule a Showing with us!</h4>
+                    <div class="submit-button">
+                        <a href="contact.html">Contact Us</a>
+                    </div>
+                </div>
+
+            </div>
+
         </div>
 
     </main>
