--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -33,8 +33,8 @@
 
     <!--Content-->
     <main class="page-body">
-        <div class="estate-italy wrap">
-            <h2>Italy Locations</h2>
+        <div class="estate-naples wrap">
+            <h2>Naples Properties</h2>
             <div class="properties-container">
                 <div class="estate-photo">
                     <img src="../photos/naples-house-one.jpeg">
@@ -52,6 +52,10 @@
                     <a href="../html-files/contact.html">Contact Us</a>
                 </div>
             </div>
+        </div>
+
+        <div class="estate-italy wrap">
+            <h2>Italy Locations</h2>
             <div class="properties-container-one">
                 <div class="estate-photo">
                     <img src="../photos/naples-house-two.webp">
