--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -33,6 +33,7 @@
 
     <!--Content-->
     <main class="page-body">
+        <!--Naples Properties-->
         <div class="estate-naples wrap">
             <h2>Naples Properties</h2>
             <div class="properties-container">
@@ -54,8 +55,9 @@
             </div>
         </div>
 
-        <div class="estate-italy wrap">
-            <h2>Italy Locations</h2>
+        <!--Rome Properties-->
+        <div class="estate-rome wrap">
+            <h2>Rome Properties</h2>
             <div class="properties-container-one">
                 <div class="estate-photo">
                     <img src="../photos/naples-house-two.webp">
@@ -73,6 +75,11 @@
                     <a href="../html-files/contact.html">Contact Us</a>
                 </div>
             </div>
+        </div>
+
+        <!--Venice Properties-->
+        <div class="estate-venice wrap">
+            <h2>Venice Properties</h2>
             <div class="properties-container-three">
                 <div class="estate-photo">
                     <img src="../photos/naples-house-three.jpeg">
@@ -90,6 +97,11 @@
                     <a href="../html-files/contact.html">Contact Us</a>
                 </div>
             </div>
+        </div>
+
+        <!--Florence Properties-->
+        <div class="estate-florence wrap">
+            <h2>Florence Properties</h2>
             <div class="properties-container-three">
                 <div class="estate-photo">
                     <img src="../photos/naples-house-l.jpeg">
@@ -108,6 +120,7 @@
                 </div>
             </div>
         </div>
+
     </main>
 
     <!--Footer-->
