--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -53,6 +53,23 @@
                     <a href="../html-files/contact.html">Contact Us</a>
                 </div>
             </div>
+            <div class="properties-container-naples-house-2">
+                <div class="estate-photo">
+                    <img src="../photos/naples-photo.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>123 Avenue</h1>
+                        <p>10 Bedrooms, 11 Bathrooms, 2 Office Rooms, 5 Cars Garage, Basement, Attic, Kitchen, Living Room, 3 Big Baloconies, Huge Garden</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$4.250.000</b></p>
+                    </div>
+                    <div class="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!--Rome Properties-->
