--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -50,7 +50,7 @@
                     <p><b>$2.950.000</b></p>
                 </div>
                 <div id="estate-button">
-                    <a href="../html-files/contact.html">Contact Us</a>
+                    <a href="../html-files/book-tour-of-house.html">Book Tour</a>
                 </div>
             </div>
             <div class="properties-container-naples-house-2">
