--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
-                        <h1>Located In Naples</h1>
+                        <h1>559 Avenue Street</h1>
                         <p>6 Bedrooms, 4 Bathrooms, 2 Office Rooms, Wine Celler, Laudry Room, Kitchen, Living Room, 4 Cars Garage, Huge Garden</p>
                     </div>
                 </div>
@@ -50,7 +50,7 @@
                     <p><b>$2.950.000</b></p>
                 </div>
                 <div id="estate-button">
-                    <a href="../html-files/book-tour-of-house.html">Book Tour</a>
+                    <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
                 </div>
             </div>
             <div class="properties-container-naples-house-2">
@@ -59,13 +59,13 @@
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
-                        <h1>123 Avenue</h1>
+                        <h1>123 Avenue Street</h1>
                         <p>10 Bedrooms, 11 Bathrooms, 2 Office Rooms, 5 Cars Garage, Basement, Attic, Kitchen, Living Room, 3 Big Baloconies, Huge Garden</p>
                     </div>
                     <div class="estate-price">
                         <p><b>$4.250.000</b></p>
                     </div>
-                    <div class="estate-button">
+                    <div id="estate-button">
                         <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
                     </div>
                 </div>
