--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -70,6 +70,23 @@
                     </div>
                 </div>
             </div>
+            <div class="properties-container-naples-house-three">
+                <div class="estate-photo">
+                    <img src="../photos/sunny-naples.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>666 Hail Street</h1>
+                        <p>5 Bedrooms, 7 Bathrooms, Basement, Huge Office Room, Kithcen, Living Room, Laudry Room, 3 Cars Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$1.980.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!--Rome Properties-->
