--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -87,6 +87,23 @@
                     </div>
                 </div>
             </div>
+            <div class="properties-container-naples-house-four">
+                <div class="estate-photo">
+                    <img src="../photos/daily-naples.webp">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>543 Palm Street</h1>
+                        <p>5 Bedrooms, 7 Bathrooms, Gated Property, 4 Cars Garage, Kithcen, Living Room, Laudry Room, Basement, Library Room</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$4.210.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!--Rome Properties-->
