--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -104,6 +104,23 @@
                     </div>
                 </div>
             </div>
+            <div class="properties-container-naples-house-five">
+                <div class="estate-photo">
+                    <img src="../photos/dream-house-naples.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>129 Bay Area Street</h1>
+                        <p>6 Bedrooms, 8 Bathrooms, Boat House, 3 Cars Garage, Living Room, Kitchen, Laudry Room, 2 Balconies, Basement, Office Room</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$5.120.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!--Rome Properties-->
