--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -143,6 +143,11 @@
                     <a href="../html-files/contact.html">Contact Us</a>
                 </div>
             </div>
+            <div class="properties-container-rome-house">
+                <div class="estate-photo">
+                    
+                </div>
+            </div>
         </div>
 
         <!--Venice Properties-->
